Bug 1490331 - Declare the character set correctly in the "PGP add-on is missing" message. r=jorgk